<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.brain_power.glassbus.FileUploadActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/file_upload"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generage_data"
        android:id="@+id/generate_data_button"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_view_text"
        android:id="@+id/data_text"
        android:layout_below="@+id/generate_data_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_data"
        android:id="@+id/send_data_button"
        android:layout_alignTop="@+id/generate_data_button"
        android:layout_alignEnd="@+id/data_text"/>

</RelativeLayout>
